<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Drive Safe</string>
    <string name="btn_start_service">Start Services</string>
    <string name="msg_gps_timeout">The user has disabled the GPS.</string>
    <string name="msg_admin_description">Requires this privilege to
		lock the screen.</string>
	<string name="msg_call_blocked">Call Blocked! Only Emergency call is allowed.</string>
    <!-- Variables used for showing speed alert screen -->
    <string name="hdr_speed_alert">Speed Alert</string>
    <string name="lbl_speed_exceed">You are travelling above the
		threshold speed.</string>
    <string name="lbl_are_u">Are you</string>
    <string name="lbl_or">OR</string>
    <!-- End Variables for speed alert screen -->


    <!-- Variables used for showing UserTest screen -->
    <string name="lbl_pass_usertest">Please enter the captcha as it appears on your screen.</string>
    <string name="msg_usertest_failed">UserTest failed – please enter the captcha as it appears on your screen.</string>
    <string name="msg_usertest_noinput">No Input from You. Restarting UserTest</string>
    <!-- End variables for UserTest screen -->


    <!-- Variables used for showing alert when GPS disabled -->
    <string name="lbl_gps_disabled">Your GPS is disabled! Please enable it to let
		DriveSafe application
		work properly.</string>
    <string name="lbl_gps_disabled_header">GPS Disabled</string>
    <string name="lbl_enable_gps">Enable</string>

    <string name="lbl_serivce_stop_header">Service Stopped</string>
    <string name="lbl_serivce_stop_msg">DriveSafe Service is stopped! Click Start service to start working</string>
    <string name="lbl_service_start">Start Service</string>

    <string name="lbl_serivce_start_header">Service Running</string>
    <string name="lbl_serivce_start_msg">DriveSafe Service is running! Click Stop Service to stop working</string>
    <string name="lbl_service_stop">Stop Service</string>

    <string name="toast_service_start">DriveSafe Service Started</string>
    <string name="toast_service_stop">DriveSafe Service Stopped</string>

    <!-- End variables used GPS disabled Alert -->
    <string name="lbl_usertest_disabled">UserTest Disabled.\nYour services will be restored once
		you are travelling below the threshold speed.</string>
    <string name="lbl_usertest_failed">UserTest Failed.\nYour services will be restored once
		you are travelling below the threshold speed.</string>
    <string name="lbl_usertest_passed">You have verified captcha test. You now have full
		access.</string>
    <string name="lbl_usertest_timeout">You failed to pass the UserTest within the configured
		time to continue the call.</string>
    <string name="lbl_touch_usertest">Tap or click on the textbox to begin test.</string>

    <!-- Following variables are for showing the status bar notification -->
    <string name="msg_status_tickertext">Call may disconnect</string>
    <string name="msg_status_title">DriveSafe notification</string>
    <string name="msg_status_notification">Your call may be disconnected if you are travelling
		above threshold speed. Please pass the Captcha test to continue.</string>
    <string name="btn_ok">OK</string>
    <string name="lbl_app_version">Application Version : %1$s</string>
    <string name="lbl_app_notrunning">DriveSafe Services are not running in your phone
		currently.</string>

    <!-- End Variables for Email registration Screen -->
    <string name="msg_call_notsupported">Call is not supported in this device. </string>
    <string name="btn_dismiss_reg_alert">OK</string>
    <string name="lbl_select_emergency_no">Select the emergency number</string>
    <string name="btn_done">Done</string>
    <string name="btn_emergency_call"><b>Emergency Call</b></string>
    <string name="last_detected_speed">Latest Detected Speed : %1$s KM/hour</string>

    <string name="day_settings_day_label">Day</string>
    <string name="day_settings_starttime_label">Start Time</string>
    <string name="day_settings_endtime_label">End Time</string>
    <string name="day_settings_enable">Enable</string>
    <string name="profile_settings_title">Update Profile Details</string>
    <string name="day_settings_title">Set Profile Activation Time</string>
    <string name="save_btn">Save</string>
    <string name="cancel_btn">Cancel</string>
    <string name="day_settings_update_success">Updated Day Settings</string>
    <string name="day_settings_update_failure">Problem in Updating Profile. Try again later</string>
    <string name="invalid_time">Invalid Time - time range is 00:00 - 23:59 </string>

    <string name="lbl_settings_threshold_speed">Threshold Speed (in KM) :</string>
    <string name="lbl_settings_captcha_screen">Show Captcha (Disable to auto-disconnect call)</string>
    <string name="lbl_settings_headset">Enable Headset Mode (Enable to allow call using headset)</string>
    <string name="lbl_settings_threshold_speed_hint">Enter Maximum allowed speed</string>
    <string name="emergency_number">Emergency Numbers (separated by comma) :</string>
    <string name="emergency_number_hint">Enter Emergency Numbers</string>
    <string name="select_screen_mode">Set Profile Activation Time</string>
    <string name="lbl_radio_btn0">Protect Mode (Show Captcha Screen)</string>
    <string name="lbl_radio_btn1">Do not Disturb Mode (No Verification screen but Lock Phone)</string>
    <string name="lbl_radio_btn2">Standard Mode</string>


    <!-- Menu Drawer -->
    <string-array name="menu_drawer_options">
        <item>Settings</item>
        <item>Report</item>
        <item>Exit</item>
    </string-array>


</resources>