<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@color/background"
android:orientation="vertical" >

<RelativeLayout
    android:id="@+id/imageView1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/background">
    <ImageView
        android:id="@+id/actionbar_moreBtn"
        android:layout_width="@dimen/fake_menu_button_min_width"
        android:layout_height="@dimen/actionbar_height"
        android:layout_alignParentRight="true"
        android:layout_marginRight="@dimen/actionbar_menu_right_margin"
        android:baselineAlignBottom="true"
        android:src="@drawable/btn_action_menu_more"
        android:layout_centerVertical="true"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@+id/actionbar_moreBtn"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/app_name"
        android:textColor="@color/profile_text_color"
        android:textSize="18sp"
        android:gravity="center"/>
</RelativeLayout>



<TextView
    android:id="@+id/textView1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:layout_marginTop="10dp"
    android:text="@string/lbl_serivce_stop_header"
    android:textAppearance="?android:attr/textAppearanceLarge" >
</TextView>

<TextView
    android:id="@+id/textView2"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginTop="20dp"
    android:text="@string/lbl_serivce_stop_msg"
    android:textAppearance="?android:attr/textAppearanceMedium" >
</TextView>

<Button
    android:id="@+id/btn1"
    android:layout_width="200dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:layout_marginTop="75dp"
    android:background="@drawable/button_colored"
    android:text="@string/btn_start_service"
    android:textColor="#000" >
</Button>

</LinearLayout>